<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".basic.DataChannelOnlyActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:id="@+id/button_frame"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:background="#F3EEE4">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stream_id_edittext"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/start_streaming_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:onClick="startStreaming"
            android:text="@string/start" />
    </LinearLayout>

    <TextView
        android:id="@+id/broadcasting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Connected"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="11sp"
        android:visibility="gone"
        android:layout_below="@id/button_frame"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/call_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/button_frame"
        android:layout_alignParentBottom="true"
        android:paddingVertical="4dp">

        <TextView
            android:id="@+id/messages_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#F3EEE4"
            android:divider="#fff" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_alignParentBottom="true"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/message_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00E91E1E"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/write_something"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:lines="2"
                android:maxLines="3"
                android:selectAllOnFocus="false"
                android:textSize="22sp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="10dp"
                android:layout_weight="2" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:padding="20dp"
                android:id="@+id/send_message_button"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/ic_send_black_24dp"
                android:onClick="sendMessage" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>